phlare/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: phlare
  namespace: phlare
spec:
  type: ClusterIP
  selector:
    app: phlare
  ports:
    - name: phlare
      protocol: TCP
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: phlare-headless
  namespace: phlare
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: phlare
